make changes happen in the handlers
