# internal/interceptors.go
@@ -17,6 +17,30 @@ const (
 	MovementIDKey          ContextKey = "movementID"
 	UnitQueueItemIDKey     ContextKey = "unitQueueItemID"
 	BuildingQueueItemIDKey ContextKey = "buildingQueueItemID"
+
+	LastIDKey   ContextKey = "lastID"
+	PageSizeKey ContextKey = "pageSize"
+)
+
+type PathParameterKey string
+type QueryParameterKey string
+
+func (s PathParameterKey) String() string  { return string(s) }
+func (s QueryParameterKey) String() string { return string(s) }
+
+const (
+	APIVersion = "v1"
+
+	CityID     PathParameterKey = "cityid"
+	ItemID     PathParameterKey = "itemid"
+	MovementID PathParameterKey = "movementid"
+
+	LastID         QueryParameterKey = "lastid"
+	PageSize       QueryParameterKey = "pagesize"
+	PlayerID       QueryParameterKey = "playerid"
+	LocationBounds QueryParameterKey = "locationbounds"
+	OriginID       QueryParameterKey = "originid"
+	DestinationID  QueryParameterKey = "destinationid"
 )
 
 func WithAuthentication(next http.Handler) http.Handler {
@@ -29,7 +53,7 @@ func WithAuthentication(next http.Handler) http.Handler {
 
 func WithCityIDContext(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		cityID := chi.URLParam(r, CityIDKey.String())
+		cityID := chi.URLParam(r, CityID.String())
 		ctx := context.WithValue(r.Context(), CityIDKey, cityID)
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
@@ -37,7 +61,7 @@ func WithCityIDContext(next http.Handler) http.Handler {
 
 func WithMovementIDContext(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		movementID := chi.URLParam(r, MovementIDKey.String())
+		movementID := chi.URLParam(r, MovementID.String())
 		ctx := context.WithValue(r.Context(), MovementIDKey, movementID)
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
@@ -45,7 +69,7 @@ func WithMovementIDContext(next http.Handler) http.Handler {
 
 func WithUnitQueueItemIDContext(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		unitQueueItemID := chi.URLParam(r, UnitQueueItemIDKey.String())
+		unitQueueItemID := chi.URLParam(r, ItemID.String())
 		ctx := context.WithValue(r.Context(), UnitQueueItemIDKey, unitQueueItemID)
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
@@ -53,8 +77,20 @@ func WithUnitQueueItemIDContext(next http.Handler) http.Handler {
 
 func WithBuildingQueueItemIDContext(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		buildingQueueItemID := chi.URLParam(r, BuildingQueueItemIDKey.String())
+		buildingQueueItemID := chi.URLParam(r, ItemID.String())
 		ctx := context.WithValue(r.Context(), BuildingQueueItemIDKey, buildingQueueItemID)
+		next.ServeHTTP(w, r.WithContext(ctx))
+	})
+}
+
+func WithPagination(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		lastID := r.URL.Query().Get(LastID.String())
+		pageSize := r.URL.Query().Get(PageSize.String())
+
+		ctx := context.WithValue(r.Context(), LastIDKey, lastID)
+		ctx = context.WithValue(ctx, PageSizeKey, pageSize)
+
 		next.ServeHTTP(w, r.WithContext(ctx))
 	})
 }
